--- a/src/css/StyleDepend/mReset.css
+++ b/src/css/StyleDepend/mReset.css
@@ -6,9 +6,9 @@ body {
 }
 
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	/* -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; */
+	/* box-sizing: border-box; */
 	font-size: 16px;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
