--- a/src/css/StyleDepend/wall-e.less
+++ b/src/css/StyleDepend/wall-e.less
@@ -1007,17 +1007,17 @@ body {
     // left: 50%;
     // transform: translate(-50%);
     padding: 10px;
-    border-radius: 4px;
+    border-radius: 6px;
     font-size: 14px;
     // animation:  wall-alert_1 100ms ease-in;  
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.6);
     color: #fff;
   }
 
   // 动画效果
   .wall-animation {
-      animation-duration: 200ms;
-      animation-timing-function: linear;
+      animation-duration: 400ms;
+      animation-timing-function: forward;
     }
 
   // ### 1、弹簧式
@@ -1026,13 +1026,37 @@ body {
   }
   @keyframes ani-spring {
     from {
-      transform: scale(.5)
+      transform: scale(.5);
     }
-    50% {
-      transform: scale(1.1)
+    80% {
+      transform: scale(1.1);
     }
     to {
-      transform: scale(1)
+      transform: scale(1);
     }
   }
+  .ani-spring-out {
+    animation-name: ani-spring-out;
+    // animation: ani-spring-out both;
+    animation-fill-mode: forwards;
+  }
+  @keyframes ani-spring-out {
+    from {
+      opcity:1;
+      transform: scale(1);
+    }
+    20% {
+      opcity:0.3;
+      transform: scale(1.1);
+    }
+    // 50% {
+    //   opcity:0.3;
+    //   transform: scale(0.5);
+    // }
+    to {
+      opcity:0;
+      transform: scale(0.01);
+    }
+  }
+
   // ### 2、淡入淡出
